5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1764_762.log
== SUBMITION (2019-06-09 17:18:25) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data: ")
dia = (data[:2])
mes = (data[2:4])
ano = data[-4:]
if(mes == 1):
	a = v[0]
elif(mes == 2):
	a = v[1]
elif(mes == 3):
	a = v[2]
elif(mes == 4):
	a = v[3]
elif(mes == 5):
	a = v[4]
elif(mes == 6):
	a = v[5]
elif(mes == 7):
	a = v[6]
elif(mes == 8):
	a = v[7]
elif(mes == 9):
	a = v[8]
elif(mes == 10):
	a = v[9]
elif(mes == 11):
	a = v[10]
elif(mes == 12):
	a = v[11]
print(dia, "de", a, "de", ano)
-- EXECUTION TIME:
1.20431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 32, in <module>
    print(dia, "de", a, "de", ano)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:20:12) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data: ")
dia = (data[:2])
mes = (data[2:4])
ano = data[-4:]
if(mes == 1):
	a = v[0]
elif(mes == 2):
	a = v[1]
elif(mes == 3):
	a = v[2]
elif(mes == 4):
	a = v[3]
elif(mes == 5):
	a = v[4]
elif(mes == 6):
	a = v[5]
elif(mes == 7):
	a = v[6]
elif(mes == 8):
	a = v[7]
elif(mes == 9):
	a = v[8]
elif(mes == 10):
	a = v[9]
elif(mes == 11):
	a = v[10]
elif(mes == 12):
	a = v[11]
print(dia, "de", a, "de", ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 17:23:22) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data: ")
dia = data[:2]
mes = int(data[2:4])
ano = data[-4:]
if(mes == 1):
	a = v[0]
elif(mes == 2):
	a = v[1]
elif(mes == 3):
	a = v[2]
elif(mes == 4):
	a = v[3]
elif(mes == 5):
	a = v[4]
elif(mes == 6):
	a = v[5]
elif(mes == 7):
	a = v[6]
elif(mes == 8):
	a = v[7]
elif(mes == 9):
	a = v[8]
elif(mes == 10):
	a = v[9]
elif(mes == 11):
	a = v[10]
elif(mes == 12):
	a = v[11]
print(dia, "de", a, "de", ano)
-- EXECUTION TIME:
0.913647
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
